<?xml version="1.0"?>
<package format="3">
  <name>omnibot_motor_driver</name>
  <version>3.7.60</version>
  <description>Motor driver for omnibot</description>
  <license>MIT</license>
  <maintainer email="vinayvp.98@gmail.com">Vinay Venkanagoud Patil</maintainer>
  <author email="vinayvp.98@gmail.com">Vinay Venkanagoud Patil</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>omnibot_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
